--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!--map root element-->
   <div id='map'></div>
   <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
-  <script src="/main.js" />
+  <script src="/main.js" ></script>
 </body>
 
 </html>
